--- a/.github/workflows/experiment_workflow.yml
+++ b/.github/workflows/experiment_workflow.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pandas numpy scikit-learn
+        pip install pandas numpy scikit-learn imbalanced-learn
 
     - name: Run Preprocessing Script
       run: |
